<resources>
    <string name="app_name">AppElectronica</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_titulo">Potencia tus ideas con nuestros componentes electrónicos de última generación. ¡Crea sin límites!</string>
    <string name="frase_started">Tu tecnología al alcance de un solo clic</string>
    <string name="getstarted">Empezemos</string>
    <string name="login_started">Registrarse</string>
    <string name="contrasena">Contraseña</string>
    <string name="Usuario">Usuario</string>
    <string name="iniciar">ACCEDER</string>
    <string name="Registrar">REGISTRARSE</string>
    <string name="No_Cuenta">¿No tienes una cuenta? Regístrate</string>
    <string name="Login">INICIAR SESION</string>
    <string name="valnombre">NOMBRE DE TARJETA</string>
    <string name="valnumerocuenta">0000 0000 0000 0000</string>
    <string name="valaño">AÑO</string>
    <string name="valfechat">FECHA</string>
    <string name="valccv">CCV</string>
    <string name="valguardartarjeta">GUARDAR</string>
    <string name="valnumerocuentas">**** **** **** 2402</string>
    <string name="valbotonpagar">PAGAR</string>
</resources>