<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.LoginActivity"
    android:background="@drawable/plantillalogin">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="103dp"
        android:layout_marginTop="67dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595"
        app:srcCompat="@mipmap/ic_icon2"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/md_white_1000"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario" />

    <EditText
        android:id="@+id/tvUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/md_white_1000"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/Usuario"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@color/md_cyan_500"
        android:text="@string/Registrar"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@color/md_cyan_500"
        android:text="@string/iniciar"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/No_Cuenta"
        android:textColor="@color/md_white_1000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/Login"
        android:textColor="@color/md_white_1000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/errorPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrarse"
        android:visibility="gone"> <!-- Inicialmente oculto -->


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>