<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.TarjetaActivity">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="457dp"
        android:layout_marginBottom="300dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576"
        app:srcCompat="@drawable/tarazul" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="PAGO DE COMPRA"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView11" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="#F6F3F3"
        android:orientation="vertical"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"></LinearLayout>

    <EditText
        android:id="@+id/txtnombreT"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/valnombre"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="#8F8585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="120dp"
        android:text="TIPO DE TARJETA"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/precio_prod1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:text="AGREGAR  N° TARJETA"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnombreT" />

    <EditText
        android:id="@+id/txttarjetaT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/valnumerocuenta"
        android:inputType="text"
        android:textColor="#F4F3F3"
        android:textColorHint="#8F8585"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/precio_prod1"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtfechaT"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/valfechat"
        android:inputType="text"
        android:textColor="#FFFEFE"
        android:textColorHint="#8F8585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrip_prod1"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtanioT"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/valaño"
        android:inputType="text"
        android:textColor="#F4F3F3"
        android:textColorHint="#8F8585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/descrip_prod1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Fecha"
        android:textColor="#E6DFDF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttarjetaT" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="135dp"
        android:text="Año"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttarjetaT" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="CCV"
        android:textColor="#FFFEFE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfechaT" />

    <EditText
        android:id="@+id/txtccvT"
        android:layout_width="147dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/valccv"
        android:inputType="text"
        android:textColor="#F4EFEF"
        android:textColorHint="#8F8585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="65dp"
        android:text="Guardar Tarjeta"
        android:textColor="#F8F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtanioT" />

    <Button
        android:id="@+id/btn_guatar_tarjeta"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/md_green_A700"
        android:hint="@string/valguardartarjeta"
        android:text=""
        android:textColorHint="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="TouchTargetSizeCheck" />








    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="178dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="#121111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="67dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/chip" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="61dp"
                android:layout_height="47dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mastercard" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="211dp"
                android:layout_height="28dp"
                android:layout_marginTop="100dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/valnumerocuentas"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtccvVT"
                android:layout_width="66dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:hint="@string/valccv"
                android:inputType="text"
                android:textColor="#F4F1F1"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#E3DDDE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView16"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:text="ALVARO QUISPE C"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="vence:"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:text="*******"
                android:textColor="#FBFAFA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnpagarT"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/md_green_A700"
        android:text="@string/valbotonpagar"
        app:icon="@drawable/altared_movil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>